# apyxl

./: CONTRIBUTING.md  Cargo.toml  HOWTO.md  LICENSE  README.md  run_example_fake_platform.sh  tag-release.sh
apyxl/: Cargo.toml
apyxl/examples/: basic_rust_parser.rs  glob_to_file_set.rs  in_out_file_set.rs  input_file_set.rs  input_glob.rs  rust_fake_platform.rs  rust_parser.rs  test.rs
apyxl/examples/csharp/: FakePlatform.sln  Platform.cs  Social.cs  User.cs  abcd.cs  api.cs  other_api.cs  parser_config.json
apyxl/examples/fake_platform/: README
apyxl/examples/fake_platform/src/: lib.rs  platform.rs
apyxl/examples/fake_platform/src/service/: mod.rs  (+2 more)
apyxl/examples/rust/: Cargo.toml
apyxl/examples/rust/src/: platform.rs
apyxl/examples/simple_input/: dto.rs  namespace.rs  not_an_rs_file.cpp  rpc.rs
apyxl/src/: executor.rs  lib.rs  rust_util.rs
apyxl/src/generator/: dbg.rs  indent.rs  markdown.rs  mod.rs  rust.rs  util.rs
apyxl/src/input/: buffer.rs  chunk_buffer.rs  file_set.rs  glob.rs  mod.rs  stdin.rs
apyxl/src/model/: builder.rs  chunk.rs  metadata.rs  mod.rs  view.rs
apyxl/src/model/api/: attribute.rs  attributes.rs  builder.rs  dependencies.rs  dto.rs  en.rs  entity.rs  entity_id.rs  field.rs  metadata.rs  mod.rs  namespace.rs  rpc.rs  ty.rs  ty_alias.rs  validate.rs
apyxl/src/model/builder/: config.rs  mod.rs
apyxl/src/output/: buffer.rs  chunk_buffer.rs  file_set.rs  indent.rs  mod.rs  stdout.rs
apyxl/src/parser/: comment.rs  config.rs  delimited.rs  error.rs  mod.rs  rust.rs  test_util.rs  util.rs
apyxl/src/parser/csharp/: attributes.rs  comment.rs  dto.rs  en.rs  expr_block.rs  mod.rs  namespace.rs  rpc.rs  ty.rs  ty_alias.rs  visibility.rs
apyxl/src/parser/rust/: attributes.rs  comment.rs  dto.rs  en.rs  expr_block.rs  import.rs  mod.rs  namespace.rs  rpc.rs  ty.rs  ty_alias.rs  visibility.rs
apyxl/src/test_util/: executor.rs  mod.rs
apyxl/src/view/: attributes.rs  dto.rs  en.rs  entity_id.rs  field.rs  mod.rs  namespace.rs  rpc.rs  sub_view.rs  ty.rs  ty_alias.rs  type_ref.rs
cli/: Cargo.toml
cli/src/: config.rs  main.rs
(+37 files in other folders)
