[package]
name = "apyxl"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
chumsky = "1.0.0-alpha.4"
ariadne = "0.3"
log = "0.4"
env_logger = "0.10"
itertools = "0.11"
globset = "0.4"
walkdir = "2.3"
dyn-clone = "1.0"
petgraph = { version = "0.6", default-features = false }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.4"
serde_json = "1.0"
