[package]
name = "apyxl"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
chumsky = { workspace = true }
ariadne = { workspace = true }
env_logger = { workspace = true }
itertools = { workspace = true }
globset = { workspace = true }
walkdir = { workspace = true }
dyn-clone = { workspace = true }
petgraph = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
