[package]
name = "cli"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apyxl = { workspace = true }
csharp = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
itertools = { workspace = true }
clap = { version = "4.3", features = ["derive"] }
env_logger = "0.10"

[[bin]]
name = "apyxl"
path = "src/main.rs"
